--- a/src/app/login/login-hero/login-hero.component.html
+++ b/src/app/login/login-hero/login-hero.component.html
@@ -1,18 +1,14 @@
-<section class="bg-gray-950 rounded-md mx-auto flex items-center justify-center">
-    <div class="flex items-center w-full">
-        <a [routerLink]="['/home']">
-            <img class="cursor-pointer w-full object-cover md:h-96 rounded-lg"
-                src="../../../assets/landing/hero-bg-4.jpg">
-        </a>
-    </div>
-    <div class="flex items-center">
-        <div class="mx-auto">
-            <h1 class="font-sans font-bold text-red-600 text-center uppercase md:text-xl text-md w-full">
-                Welcome to Berliz
-            </h1>
-            <h6 class="text-sm md:text-md font-sans font-bold text-center text-gray-200 w-full">
-                Be fit! Be you!
-            </h6>
-        </div>
+<section class="w-full h-full bg-gray-950 flex flex-col justify-center items-center">
+    <a [routerLink]="['/home']" class="w-full h-full">
+        <img src="../../../assets/landing/muscle-group-1.jpg" class="w-full h-full object-cover cursor-pointer"
+            alt="Berliz background" />
+    </a>
+
+    <div class="absolute text-center">
+        <h1 class="text-red-600 text-xl md:text-2xl font-bold uppercase font-sans"
+            style="text-shadow: 2px 2px 4px black;">
+            Welcome to Berliz
+        </h1>
+        <p class="text-gray-200 text-sm md:text-md font-bold font-sans">Your journey to fitness starts here</p>
     </div>
 </section>
