--- a/src/app/trainers/trainer-partner-form/trainer-partner-form.component.html
+++ b/src/app/trainers/trainer-partner-form/trainer-partner-form.component.html
@@ -33,13 +33,27 @@
                             (change)="onCertificateSelected($event)"
                             class="absolute inset-0 opacity-0 cursor-pointer" />
                     </div>
-                    <p class="text-xs text-gray-700 mt-1 italic">PDF only</p>
-                    <p *ngIf="selectedCertificate" class="text-xs mt-1 text-green-600 truncate max-w-[140px]">
-                        {{ selectedCertificate }}
-                    </p>
-                    <div *ngIf="addPartnerForm.get('certificate')?.invalid && invalidForm"
-                        class="text-xs text-red-500 mt-1">
-                        Certificate is required
+                    <!-- Wrapper -->
+                    <div class="mt-2 flex flex-col items-center text-center">
+                        <!-- Default Message -->
+                        <p *ngIf="!selectedCertificate" class="text-xs text-black italic">
+                            Select PDF file
+                        </p>
+                        <!-- File Selected -->
+                        <div *ngIf="selectedCertificate" class="flex flex-col items-center">
+                            <p class="text-xs text-green-500 truncate max-w-[160px] flex items-center gap-1">
+                                <!-- <feather-icon name="file-text" class="w-2 h-2 text-red-600"></feather-icon> -->
+                                {{ selectedCertificate }}
+                            </p>
+                            <button type="button" (click)="selectedCertificate = null"
+                                class="text-red-600 hover:underline text-xs mt-1">
+                                Remove
+                            </button>
+                        </div>
+                    </div>
+                    <div *ngIf="addPartnerForm.get('certificate')?.invalid && addPartnerForm.get('certificate')?.dirty"
+                        class="text-xs text-red-400 mt-1">
+                        Upload a valid Certificate file
                     </div>
                 </div>
 
@@ -52,12 +66,27 @@
                         <input type="file" accept=".pdf" formControlName="cv" (change)="onCVSelected($event)"
                             class="absolute inset-0 opacity-0 cursor-pointer" />
                     </div>
-                    <p class="text-xs text-gray-700 mt-1 italic">PDF only</p>
-                    <p *ngIf="selectedCV" class="text-xs mt-1 text-green-600 truncate max-w-[140px]">
-                        {{ selectedCV }}
-                    </p>
-                    <div *ngIf="addPartnerForm.get('cv')?.invalid && invalidForm" class="text-xs text-red-500 mt-1">
-                        Upload a valid file
+                    <!-- Wrapper -->
+                    <div class="mt-2 flex flex-col items-center text-center">
+                        <!-- Default Message -->
+                        <p *ngIf="!selectedCV" class="text-xs text-black italic">
+                            Select PDF file
+                        </p>
+                        <!-- File Selected -->
+                        <div *ngIf="selectedCV" class="flex flex-col items-center">
+                            <p class="text-xs text-green-500 truncate max-w-[160px] flex items-center gap-1">
+                                <!-- <feather-icon name="file-text" class="w-2 h-2 text-red-600"></feather-icon> -->
+                                {{ selectedCV }}
+                            </p>
+                            <button type="button" (click)="selectedCV = null"
+                                class="text-red-600 hover:underline text-xs mt-1">
+                                Remove
+                            </button>
+                        </div>
+                    </div>
+                    <div *ngIf="addPartnerForm.get('cv')?.invalid && addPartnerForm.get('cv')?.dirty"
+                        class="text-xs text-red-400 mt-1">
+                        Upload a valid CV file
                     </div>
                 </div>
             </div>
@@ -112,11 +141,11 @@
                     Clear
                 </button>
                 <button type="submit" (click)="addPartner()" [disabled]="addPartnerForm.invalid"
+                    [ngClass]="{'opacity-50 cursor-not-allowed': addPartnerForm.invalid}"
                     class="px-5 py-2 rounded-md bg-red-600 text-white hover:bg-red-700 transition font-semibold flex items-center gap-2">
 
-                    <ng-container *ngIf="addPartnerForm.invalid">Please fill in valid Information</ng-container>
-                    <ng-container *ngIf="!addPartnerForm.invalid"> <i-feather name="send"
-                            class="w-4 h-4"></i-feather>Submit</ng-container>
+                    <!-- <ng-container *ngIf="addPartnerForm.invalid">Complete form</ng-container> -->
+                    <ng-container> <i-feather name="send" class="w-4 h-4"></i-feather>Submit</ng-container>
                 </button>
             </div>
         </form>
