--- a/src/app/about-us/about-us-hero/about-us-hero.component.html
+++ b/src/app/about-us/about-us-hero/about-us-hero.component.html
@@ -1,6 +1,6 @@
 <section class="w-full relative">
     <div class="hero-bg justify-center w-full h-64 p-24 mt-5">
-    <h1 class="font-sans font-bold text-red-600 text-center w-full rounded-md uppercase text-4xl cursor-pointer w-full">
+    <h1 class="font-sans font-bold text-red-600 text-center w-full rounded-md uppercase text-4xl w-full">
            About us
     </h1>
     </div>
