--- a/src/app/categories/categories-hero/categories-hero.component.html
+++ b/src/app/categories/categories-hero/categories-hero.component.html
@@ -1,7 +1,7 @@
 <section class="w-full relative font-sans">
         <div class="hero-bg justify-center w-full h-64 p-24 mt-5">
                 <h1 class="font-sans font-bold text-red-600 text-center w-full rounded-md uppercase
-                 text-4xl cursor-pointer w-full">
+                 text-4xl w-full">
                         Services
                 </h1>
         </div>
